--- a/Cranks.Targets.AnalyzerPackage/Cranks.Targets.AnalyzerPackage.csproj
+++ b/Cranks.Targets.AnalyzerPackage/Cranks.Targets.AnalyzerPackage.csproj
@@ -21,16 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="build\**"
-          Pack="True"
-          PackagePath="build" />
-    <None Include="..\README.md"
-          Pack="True"
-          Link="README.md"
-          PackagePath="" />
-    <None Include="_._"
-          Pack="True"
-          PackagePath="lib" />
+    <None Include="build\**" Pack="True" PackagePath="build" />
+    <None Include="..\README.md" Pack="True" Link="README.md" PackagePath="" />
+    <None Include="_._" Pack="True" PackagePath="lib\netstandard2.0" />
   </ItemGroup>
 
 </Project>
