--- a/Cranks.Targets.AnalyzerReference/Cranks.Targets.AnalyzerReference.csproj
+++ b/Cranks.Targets.AnalyzerReference/Cranks.Targets.AnalyzerReference.csproj
@@ -17,7 +17,7 @@
   <ItemGroup>
     <None Include="build\**" Pack="True" PackagePath="build" />
     <None Include="..\README.md" Pack="True" Link="README.md" PackagePath="" />
-    <None Include="_._" Pack="True" PackagePath="lib" />
+    <None Include="_._" Pack="True" PackagePath="lib\netstandard2.0" />
   </ItemGroup>
 
 </Project>
